{
  "version": 4,
  "terraform_version": "0.14.9",
  "serial": 20,
  "lineage": "98a278b0-a83f-21b3-8d27-e72f7447ae46",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip_pub_10",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-06025d7699ad34005",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-159-66-224.compute-1.amazonaws.com",
            "public_ip": "54.159.66.224",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip_pub_20",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0f7589b6ded9d3be6",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-226-121-5.compute-1.amazonaws.com",
            "public_ip": "54.226.121.5",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nagios",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087c17d1fe0178315",
            "arn": "arn:aws:ec2:us-east-1:549454439016:instance/i-03cbd22b315038b6c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03cbd22b315038b6c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ee680538a8926e58",
            "private_dns": "ip-10-0-1-71.ec2.internal",
            "private_ip": "10.0.1.71",
            "public_dns": "ec2-3-237-175-65.compute-1.amazonaws.com",
            "public_ip": "3.237.175.65",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00a03277395ff6530",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-008f726d2abb0c195",
            "tags": {
              "Name": "nagios"
            },
            "tags_all": {
              "Name": "nagios"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0dd979d9764e79d44"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_vpc10_public",
            "aws_subnet.sn_vpc10_public",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "node_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087c17d1fe0178315",
            "arn": "arn:aws:ec2:us-east-1:549454439016:instance/i-067b7d365eb4fb33e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-067b7d365eb4fb33e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03dea9b9a02c18b9f",
            "private_dns": "ip-10-0-1-141.ec2.internal",
            "private_ip": "10.0.1.141",
            "public_dns": "ec2-3-237-201-84.compute-1.amazonaws.com",
            "public_ip": "3.237.201.84",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08d4b3df5c3d4f733",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-008f726d2abb0c195",
            "tags": {
              "Name": "node_a"
            },
            "tags_all": {
              "Name": "node_a"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0dd979d9764e79d44"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_vpc10_public",
            "aws_subnet.sn_vpc10_public",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "node_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087c17d1fe0178315",
            "arn": "arn:aws:ec2:us-east-1:549454439016:instance/i-05dc68dd3788a9811",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05dc68dd3788a9811",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a00dfd31819a5e77",
            "private_dns": "ip-20-0-1-90.ec2.internal",
            "private_ip": "20.0.1.90",
            "public_dns": "ec2-35-172-233-77.compute-1.amazonaws.com",
            "public_ip": "35.172.233.77",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07509c5d9ba1cc235",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ec3fc534895ee07e",
            "tags": {
              "Name": "node_b"
            },
            "tags_all": {
              "Name": "node_b"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0deb132f33aa9df79"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_vpc20_public",
            "aws_subnet.sn_vpc20_public",
            "aws_vpc.vpc20"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "node_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087c17d1fe0178315",
            "arn": "arn:aws:ec2:us-east-1:549454439016:instance/i-009d0de138fd5b2b5",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-009d0de138fd5b2b5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a7da89329a15755f",
            "private_dns": "ip-10-0-2-211.ec2.internal",
            "private_ip": "10.0.2.211",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0809e98aa0384d48e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01381d370bc83c2cd",
            "tags": {
              "Name": "node_c"
            },
            "tags_all": {
              "Name": "node_c"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0dd62601d42aa91f6"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_vpc10_private",
            "aws_subnet.sn_vpc10_private",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "node_d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087c17d1fe0178315",
            "arn": "arn:aws:ec2:us-east-1:549454439016:instance/i-04db54eb43b1818c5",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04db54eb43b1818c5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a90d96062e1f378a",
            "private_dns": "ip-20-0-2-67.ec2.internal",
            "private_ip": "20.0.2.67",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-081669b8fb823b6f1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-027ed382f3d96e069",
            "tags": {
              "Name": "node_d"
            },
            "tags_all": {
              "Name": "node_d"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-038a6b4e6009d2c1d"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_vpc20_private",
            "aws_subnet.sn_vpc20_private",
            "aws_vpc.vpc20"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_vpc10",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549454439016:internet-gateway/igw-07943e233b8897175",
            "id": "igw-07943e233b8897175",
            "owner_id": "549454439016",
            "tags": {
              "Name": "igw_vpc10"
            },
            "tags_all": {
              "Name": "igw_vpc10"
            },
            "vpc_id": "vpc-0b259cf5faf8da254"
          },
          "dependencies": [
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_vpc20",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549454439016:internet-gateway/igw-032b77bf62b171914",
            "id": "igw-032b77bf62b171914",
            "owner_id": "549454439016",
            "tags": {
              "Name": "igw_vpc20"
            },
            "tags_all": {
              "Name": "igw_vpc20"
            },
            "vpc_id": "vpc-011bdaf2f823ff5d0"
          },
          "dependencies": [
            "aws_vpc.vpc20"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_vpc10_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_vpc10_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_vpc20_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_vpc20_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_vpc10_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549454439016:security-group/sg-0dd62601d42aa91f6",
            "description": "SG para rede privada",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All to all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dd62601d42aa91f6",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16",
                  "20.0.0.0/16"
                ],
                "description": "All from 10.0.0.0/16 and 20.0.0.0/16",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "SG Private VPC10",
            "name_prefix": "",
            "owner_id": "549454439016",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_vpc10_private"
            },
            "tags_all": {
              "Name": "sg_vpc10_private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b259cf5faf8da254"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_vpc10_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549454439016:security-group/sg-0dd979d9764e79d44",
            "description": "SG para a rede publica",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All to all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dd979d9764e79d44",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Liberando a porta 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Liberando a porta 3389",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Liberando a porta 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16",
                  "20.0.0.0/16"
                ],
                "description": "All from 10.0.0.0/16 and 20.0.0.0/16",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "SG Pub VPC10",
            "name_prefix": "",
            "owner_id": "549454439016",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_vpc10_public"
            },
            "tags_all": {
              "Name": "sg_vpc10_public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b259cf5faf8da254"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_vpc20_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549454439016:security-group/sg-038a6b4e6009d2c1d",
            "description": "SG para rede privada",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All to all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-038a6b4e6009d2c1d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16",
                  "20.0.0.0/16"
                ],
                "description": "All from 10.0.0.0/16 and 20.0.0.0/16",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "SG Private VPC20",
            "name_prefix": "",
            "owner_id": "549454439016",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_vpc20_private"
            },
            "tags_all": {
              "Name": "sg_vpc20_private"
            },
            "timeouts": null,
            "vpc_id": "vpc-011bdaf2f823ff5d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc20"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_vpc20_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549454439016:security-group/sg-0deb132f33aa9df79",
            "description": "SG para a rede publica",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All to all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0deb132f33aa9df79",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Liberando a porta 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Liberando a porta 3389",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Liberando a porta 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16",
                  "20.0.0.0/16"
                ],
                "description": "All from 10.0.0.0/16 and 20.0.0.0/16",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "SG Pub VPC20",
            "name_prefix": "",
            "owner_id": "549454439016",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_vpc20_public"
            },
            "tags_all": {
              "Name": "sg_vpc20_public"
            },
            "timeouts": null,
            "vpc_id": "vpc-011bdaf2f823ff5d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc20"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_vpc10_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549454439016:subnet/subnet-01381d370bc83c2cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-01381d370bc83c2cd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "549454439016",
            "tags": {
              "Name": "sn_vpc10_private"
            },
            "tags_all": {
              "Name": "sn_vpc10_private"
            },
            "vpc_id": "vpc-0b259cf5faf8da254"
          },
          "dependencies": [
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_vpc10_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549454439016:subnet/subnet-008f726d2abb0c195",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-008f726d2abb0c195",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "549454439016",
            "tags": {
              "Name": "sn_vpc10_public"
            },
            "tags_all": {
              "Name": "sn_vpc10_public"
            },
            "vpc_id": "vpc-0b259cf5faf8da254"
          },
          "dependencies": [
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_vpc20_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549454439016:subnet/subnet-027ed382f3d96e069",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "20.0.2.0/24",
            "id": "subnet-027ed382f3d96e069",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "549454439016",
            "tags": {
              "Name": "sn_vpc20_private"
            },
            "tags_all": {
              "Name": "sn_vpc20_private"
            },
            "vpc_id": "vpc-011bdaf2f823ff5d0"
          },
          "dependencies": [
            "aws_vpc.vpc20"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_vpc20_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549454439016:subnet/subnet-0ec3fc534895ee07e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "20.0.1.0/24",
            "id": "subnet-0ec3fc534895ee07e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "549454439016",
            "tags": {
              "Name": "sn_vpc20_public"
            },
            "tags_all": {
              "Name": "sn_vpc20_public"
            },
            "vpc_id": "vpc-011bdaf2f823ff5d0"
          },
          "dependencies": [
            "aws_vpc.vpc20"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc10",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549454439016:vpc/vpc-0b259cf5faf8da254",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05da6c295bc95c06e",
            "default_route_table_id": "rtb-004940fa87e3bb63c",
            "default_security_group_id": "sg-0b3566a68f8a66dc8",
            "dhcp_options_id": "dopt-36ba9f4c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b259cf5faf8da254",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-004940fa87e3bb63c",
            "owner_id": "549454439016",
            "tags": {
              "Name": "vpc10"
            },
            "tags_all": {
              "Name": "vpc10"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc20",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549454439016:vpc/vpc-011bdaf2f823ff5d0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "20.0.0.0/16",
            "default_network_acl_id": "acl-0634bfc356345ec72",
            "default_route_table_id": "rtb-0bd4e731ec343d77e",
            "default_security_group_id": "sg-0a845c8bc524188af",
            "dhcp_options_id": "dopt-36ba9f4c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-011bdaf2f823ff5d0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0bd4e731ec343d77e",
            "owner_id": "549454439016",
            "tags": {
              "Name": "vpc20"
            },
            "tags_all": {
              "Name": "vpc20"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "vpc_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "auto_accept": true,
            "id": "pcx-0c698bf2a46625f5f",
            "peer_vpc_id": "vpc-0b259cf5faf8da254",
            "tags": {
              "Name": "vpc_peering"
            },
            "tags_all": {
              "Name": "vpc_peering"
            },
            "vpc_id": "vpc-011bdaf2f823ff5d0"
          },
          "dependencies": [
            "aws_vpc.vpc10",
            "aws_vpc.vpc20"
          ]
        }
      ]
    }
  ]
}